<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.kewo.huda.membership"
    android:orientation="vertical"
    android:background="@drawable/bg">
    <androidx.appcompat.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/toolbar"
        android:background="@color/colorPrimary">


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Membership"
            android:textSize="20sp"
            android:fontFamily="@font/lato_bold"
            android:gravity="center"
            android:textColor="@color/colorWhite"/>
    </androidx.appcompat.widget.Toolbar>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:layout_gravity="center"
                android:layout_marginTop="20dp">

                <TextView
                    android:id="@+id/first"
                    android:textColor="@color/white"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:textSize="18sp"
                    android:text="@string/note"
                    android:fontFamily="@font/lato_bold"/>

                <TextView
                    android:id="@+id/second"
                    android:textColor="@color/white"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:textSize="18sp"
                    android:gravity="center"
                    android:text="@string/note"
                    android:fontFamily="@font/lato_bold" />

            </FrameLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="20dp"
                android:id="@+id/linear_form">
                <TextView
                    android:textColor="@color/white"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="18sp"
                    android:text="@string/step1"
                    android:fontFamily="@font/lato_bold"

                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:id="@+id/step_form"/>
            <TextView
                android:textColor="@color/white"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:textSize="18sp"
                android:text="@string/form"
                android:fontFamily="@font/lato"

                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:id="@+id/form_text"/>
                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Click Here"
                    android:id="@+id/form"/>

            </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="15dp">
            <TextView
                android:textColor="@color/white"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:text="@string/step2"
                android:fontFamily="@font/lato_bold"

                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"/>
            <TextView
                android:textColor="@color/white"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:textSize="18sp"
                android:text="@string/text2"
                android:fontFamily="@font/lato"

                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp" />
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Details"
                android:id="@+id/detail"/>
        </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="15dp">
                <TextView
                    android:textColor="@color/white"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="18sp"
                    android:text="@string/step3"
                    android:fontFamily="@font/lato_bold"

                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"/>
                <TextView
                    android:textColor="@color/white"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:textSize="18sp"
                    android:text="@string/text3"
                    android:fontFamily="@font/lato"

                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp" />
                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Click Here"
                    android:id="@+id/voucher"/>
            </LinearLayout>
            <TextView
                android:textColor="@color/white"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:text="If You Are Already A Member then, "
                android:fontFamily="@font/lato_bold"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"/>
            <Button


                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:layout_gravity="center"
                android:layout_marginTop="15dp"
                android:layout_marginLeft="60dp"
                android:layout_marginRight="60dp"
                android:text="Visit Dashboard"
                android:textColor="@color/white"
                android:background="@drawable/button"
                android:fontFamily="@font/lato"
                android:textSize="18sp"
                android:id="@+id/start"/>
        </LinearLayout>
    </ScrollView>
</LinearLayout>